--- a/barberia-volde-API/Infraestructure/Infraestructure.csproj
+++ b/barberia-volde-API/Infraestructure/Infraestructure.csproj
@@ -13,4 +13,8 @@
     <Folder Include="ThirstService\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+  </ItemGroup>
+
 </Project>
